<resources>
    <string name="app_name">JurnalKas</string>

    <string name="overview">Overview</string>
    <string name="profile_user">Profile User</string>
    <string name="logout">Logout</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account?</string>
    <string name="login">Login</string>
    <string name="start">Get Started</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="have_account">Have Account?</string>
    <string name="phone_number">Phone Number</string>
    <string name="age">Birthday</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="edit_profile">Update Profile</string>
    <string name="save">Save</string>
    <string name="delete_account">Delete Account</string>
    <string name="confirmpw">Confirm Password</string>
    <string name="yourBalance">Your Balance</string>
    <string name="Settings">Settings</string>
    <string name="Category">Category</string>
    <string name="Categorys">Food,Education,etc.</string>
    <string name="Nominal">Nominal</string>
    <string name="Cash">Cash</string>
    <string name="Money">Rp.12.000</string>


    <string name="text_save_transaction">Save Transaction</string>
    <string name="text_ui_mode">UI Mode</string>
    <string name="text_total_income">Total Income</string>
    <string name="text_total_expense">Total Expense</string>
    <string name="text_total_balance">Total Balance</string>
    <string name="text_recent_transactions">Recent Transactions</string>
    <string name="text_view_all">View all</string>
    <string name="text_expense_when">When</string>
    <string name="text_expense_amount">Amount</string>
    <string name="text_expense_transaction_type">Transaction type</string>
    <string name="text_expense_tag">Tag</string>
    <string name="text_expense_note">Note</string>
    <string name="text_expense_add_transaction">Save Transaction</string>
    <string name="text_expense_rupees">₹</string>
    <string name="success_expense_saved">Transaction saved successfully</string>
    <string name="success_transaction_delete">Transaction deleted successfully!</string>
    <string name="text_title">Title</string>
    <string name="text_about">About</string>
    <string name="text_filter">Filter</string>
    <string name="text_edit">Edit</string>
    <string name="text_createdAt">Created At</string>

    <!--  Share -->
    <string name="success_transaction_export">Transaction exported successfully!</string>
    <string name="failed_transaction_export">Transaction exported failed ☹️</string>
    <string name="text_error">Transaction exported failed ☹️</string>
    <string name="support_pending">Support for export on Android10+ is still in progress, kindly be patient and thanks for support!</string>
    <string name="text_open">Open</string>

    <!--  About -->
    <string name="text_about_license_title"><![CDATA[Attributions & License]]></string>
    <string name="text_about_license">Licensed Under Apache 2.0 License</string>
    <string name="text_about_visit_title">Visit</string>
    <string name="text_about_visit_url"><u>https://github.com/Spikeysanju/Expenso</u></string>
    <string name="text_app_version">v%s (%d)</string>
    <string name="text_share_as_text">Share as Text</string>
    <string name="text_share_as_image">Share as Image</string>
    <string name="text_delete">Delete</string>
    <string name="text_share">Share</string>

    <!-- share transaction -->
    <string name="share_message">\%s \nAmount: %s, \nTransaction-Type: %s, \nTag: %s, \nDate: %s, \nNote: %s, \nCreatedAt: %s \n\nVisit: https://github.com/Spikeysanju/Expenso</string>
    <string name="text_transaction_empty_title">No Transaction Yet!</string>
    <string name="text_transaction_empty_desc">After your first transaction you will be able to view it here</string>
    <string name="text_export_csv">Export to CSV</string>
    <string name="text_add_transaction">Add Transaction</string>
    <string name="text_undo">Undo</string>
    <string name="text_error_occurred">Error occurred!</string>


    <string name="profile">My Profile</string>
    <string name="fullname">Fullname</string>
    <string name="phone">Phone</string>
    <string name="birthday">Birthday</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_Ticket">Ticket</string>
    <string name="menu_history">History</string>
    <string name="menu_profile">Profile</string>
    <string name="date">Date</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Simple Event Calendar</string>

    <string name="dummy">Dummy</string>
    <string name="prev_week">Previous</string>
    <string name="next_week">Next</string>

    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="event_enter_title">Enter title</string>
    <string name="event_enter_note">Enter event note</string>
    <string name="event_duration">Event duration</string>
    <string name="event_schedule">Event Schedule</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="add_evnt">Add Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="skip">Skip</string>
    <string name="successSignUp">Sign Up Success,Please Login</string>
    <string name="failSignUp">Sign Up Failed,Please Check Your Data Or Connection</string>
    <string name="successSignIn">Sign In Success</string>
    <string name="failSignIn">Sign In Failed,Please Check Your Email Or Password</string>
    <string name="Retry">Retry</string>

    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_add_budget">Add Budget</string>
    <string name="title_chart">Chart</string>
    <string name="title_detail">Detail</string>
    <string name="title_wallet">Wallet</string>
    <string name="select_date_button">Select Date</string>
    <string name="income">income</string>
    <string name="expense">expense</string>

    <string name="eat">eat</string>
    <string name="foody">foody</string>
    <string name="housing">housing</string>
    <string name="daily">daily</string>
    <string name="traffic">traffic</string>
    <string name="education">education</string>
    <string name="fun">fun</string>
    <string name="salary">salary</string>
    <string name="parttime">parttime</string>
    <string name="invest">invest</string>
    <string name="others">others</string>
    <string name="bonus">bonus</string>
    <string name="present">present</string>
    <string name="errorTag">Transaction Type Must Be Checked</string>

    <string name="verifyTag">Please Verify Your email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>